--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "livewire/livewire": "^3.5",
+        "nesbot/carbon": "^2.72",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.9"
     },
